Add Navbar component to HomeView

--- a/ecommerce-website/src/locales/ar.json
+++ b/ecommerce-website/src/locales/ar.json
@@ -1,3 +1,5 @@
 {
-    "hello": "مرحبا"
+    "hello": "مرحبا",
+    "Get 50% off on selected items": "احصل على خصم 50٪ على العناصر المحددة",
+    "shopNow": "تسوق الآن"
 }
