--- a/ecommerce-website/src/locales/en.json
+++ b/ecommerce-website/src/locales/en.json
@@ -1,3 +1,5 @@
 {
-    "hello": "Hello"
+    "hello": "Hello",
+    "Get 50% off on selected items": "Get 50% off on selected items",
+    "shopNow": "Shop Now"
 }
