--- a/ecommerce-website/src/locales/ar.json
+++ b/ecommerce-website/src/locales/ar.json
@@ -1,5 +1,20 @@
 {
     "hello": "مرحبا",
     "Get 50% off on selected items": "احصل على خصم 50٪ على العناصر المحددة",
-    "shopNow": "تسوق الآن"
+    "shopNow": "تسوق الآن",
+    "Categories": "الفئات",
+    "Deals": "صفقات",
+    "Products": "منتجات",
+    "Cart": "عربة التسوق",
+    "Checkout": "الدفع",
+    "Home": "الصفحة الرئيسية",
+    "About": "حول",
+    "Contact": "اتصل",
+    "Search": "ابحث",
+    "Account": "الحساب",
+    "ShopCart": "عربة التسوق",
+    "What's New": "ما الجديد",
+    "Delivery": "التوصيل",
+    "light":"نهاري",
+    "dark":"ليلي"
 }
