--- a/ecommerce-website/src/locales/en.json
+++ b/ecommerce-website/src/locales/en.json
@@ -1,5 +1,20 @@
 {
     "hello": "Hello",
     "Get 50% off on selected items": "Get 50% off on selected items",
-    "shopNow": "Shop Now"
+    "shopNow": "Shop Now",
+    "Categories": "Categories",
+    "Deals": "Deals",
+    "Products": "Products",
+    "Cart": "Cart",
+    "Checkout": "Checkout",
+    "Home": "Home",
+    "About": "About",
+    "Contact": "Contact",
+    "Search": "Search",
+    "Account": "Account",
+    "ShopCart": "Cart",
+    "What's New": "What's New",
+    "Delivery": "Delivery",
+    "light": "Light",
+    "dark": "Dark"
 }
