Refactor Navbar component and update i18n translations

--- a/ecommerce-website/src/locales/ar.json
+++ b/ecommerce-website/src/locales/ar.json
@@ -16,5 +16,6 @@
     "What's New": "ما الجديد",
     "Delivery": "التوصيل",
     "light":"نهاري",
-    "dark":"ليلي"
+    "dark":"ليلي",
+    "Shopping And Department Store":"التسوق في متجر متعدد الأقسام"
 }
