--- a/ecommerce-website/src/locales/en.json
+++ b/ecommerce-website/src/locales/en.json
@@ -16,5 +16,6 @@
     "What's New": "What's New",
     "Delivery": "Delivery",
     "light": "Light",
-    "dark": "Dark"
+    "dark": "Dark",
+    "Shopping And Department Store": "Shopping And Department Store"
 }
