Refactor Navbar component and update i18n translations

--- a/ecommerce-website/src/locales/ar.json
+++ b/ecommerce-website/src/locales/ar.json
@@ -17,5 +17,7 @@
     "Delivery": "التوصيل",
     "light":"نهاري",
     "dark":"ليلي",
-    "Shopping And Department Store":"التسوق في متجر متعدد الأقسام"
+    "Shopping And Department Store":"التسوق في متجر متعدد الأقسام",
+    "bannerDescription":"هو موقع للتجارة الإلكترونية يقدم مجموعة واسعة من المنتجات عبر فئات مختلفة. استمتع بالتسوق السلس مع عمليات الدفع الآمنة وخيارات التسليم السريع",
+    "learnMore":"تعرف على المزيد"
 }
