--- a/ecommerce-website/src/locales/en.json
+++ b/ecommerce-website/src/locales/en.json
@@ -17,5 +17,8 @@
     "Delivery": "Delivery",
     "light": "Light",
     "dark": "Dark",
-    "Shopping And Department Store": "Shopping And Department Store"
+    "Shopping And Department Store": "Shopping And Department Store",
+    "bannerDescription":"Shop Cart is an e-commerce website offering a wide range of products across various categories. Enjoy seamless shopping with secure payments and fast delivery options",
+    "learnMore":"Learn More"
+
 }
