Refactor Navbar component and add HomeCategories component

--- a/ecommerce-website/src/locales/ar.json
+++ b/ecommerce-website/src/locales/ar.json
@@ -1,23 +1,24 @@
 {
-    "hello": "مرحبا",
-    "Get 50% off on selected items": "احصل على خصم 50٪ على العناصر المحددة",
-    "shopNow": "تسوق الآن",
-    "Categories": "الفئات",
-    "Deals": "صفقات",
-    "Products": "منتجات",
-    "Cart": "عربة التسوق",
-    "Checkout": "الدفع",
-    "Home": "الصفحة الرئيسية",
-    "About": "حول",
-    "Contact": "اتصل",
-    "Search": "ابحث",
-    "Account": "الحساب",
-    "ShopCart": "عربة التسوق",
-    "What's New": "ما الجديد",
-    "Delivery": "التوصيل",
-    "light":"نهاري",
-    "dark":"ليلي",
-    "Shopping And Department Store":"التسوق في متجر متعدد الأقسام",
-    "bannerDescription":"هو موقع للتجارة الإلكترونية يقدم مجموعة واسعة من المنتجات عبر فئات مختلفة. استمتع بالتسوق السلس مع عمليات الدفع الآمنة وخيارات التسليم السريع",
-    "learnMore":"تعرف على المزيد"
+  "hello": "مرحبا",
+  "Get 50% off on selected items": "احصل على خصم 50٪ على العناصر المحددة",
+  "shopNow": "تسوق الآن",
+  "Categories": "الفئات",
+  "Deals": "صفقات",
+  "Products": "منتجات",
+  "Cart": "عربة التسوق",
+  "Checkout": "الدفع",
+  "Home": "الصفحة الرئيسية",
+  "About": "حول",
+  "Contact": "اتصل",
+  "Search": "ابحث",
+  "Account": "الحساب",
+  "ShopCart": "عربة التسوق",
+  "What's New": "ما الجديد",
+  "Delivery": "التوصيل",
+  "light": "نهاري",
+  "dark": "ليلي",
+  "Shopping And Department Store": "التسوق في متجر متعدد الأقسام",
+  "bannerDescription": "هو موقع للتجارة الإلكترونية يقدم مجموعة واسعة من المنتجات عبر فئات مختلفة. استمتع بالتسوق السلس مع عمليات الدفع الآمنة وخيارات التسليم السريع",
+  "learnMore": "تعرف على المزيد",
+  "Shop Our Top Categories": "التسوق من افضل الفئات "
 }
