--- a/ecommerce-website/src/locales/en.json
+++ b/ecommerce-website/src/locales/en.json
@@ -19,6 +19,7 @@
     "dark": "Dark",
     "Shopping And Department Store": "Shopping And Department Store",
     "bannerDescription":"Shop Cart is an e-commerce website offering a wide range of products across various categories. Enjoy seamless shopping with secure payments and fast delivery options",
-    "learnMore":"Learn More"
+    "learnMore":"Learn More",
+    "Shop Our Top Categories":"Shop Our Top Categories"
 
 }
