Refactor Navbar component and add HomeCategories component

--- a/ecommerce-website/src/locales/ar.json
+++ b/ecommerce-website/src/locales/ar.json
@@ -20,5 +20,7 @@
   "Shopping And Department Store": "التسوق في متجر متعدد الأقسام",
   "bannerDescription": "هو موقع للتجارة الإلكترونية يقدم مجموعة واسعة من المنتجات عبر فئات مختلفة. استمتع بالتسوق السلس مع عمليات الدفع الآمنة وخيارات التسليم السريع",
   "learnMore": "تعرف على المزيد",
-  "Shop Our Top Categories": "التسوق من افضل الفئات "
+  "Shop Our Top Categories": "التسوق من افضل الفئات ",
+  "Today best Deals For You!": "أفضل العروض اليوم لك!",
+  "Add to Cart": "أضف إلى السلة"
 }
