--- a/ecommerce-website/src/locales/en.json
+++ b/ecommerce-website/src/locales/en.json
@@ -20,6 +20,8 @@
     "Shopping And Department Store": "Shopping And Department Store",
     "bannerDescription":"Shop Cart is an e-commerce website offering a wide range of products across various categories. Enjoy seamless shopping with secure payments and fast delivery options",
     "learnMore":"Learn More",
-    "Shop Our Top Categories":"Shop Our Top Categories"
+    "Shop Our Top Categories":"Shop Our Top Categories",
+    "Today best Deals For You!":"Today best Deals For You!",
+    "Add to Cart":"Add to Cart"
 
 }
