Refactor Navbar component, add HomeCategories component, and introduce Brands component

--- a/ecommerce-website/src/locales/ar.json
+++ b/ecommerce-website/src/locales/ar.json
@@ -22,5 +22,6 @@
   "learnMore": "تعرف على المزيد",
   "Shop Our Top Categories": "التسوق من افضل الفئات ",
   "Today best Deals For You!": "أفضل العروض اليوم لك!",
-  "Add to Cart": "أضف إلى السلة"
+  "Add to Cart": "أضف إلى السلة",
+  "Choose By Brand": "اختر حسب العلامة التجارية"
 }
