--- a/ecommerce-website/src/locales/en.json
+++ b/ecommerce-website/src/locales/en.json
@@ -22,6 +22,7 @@
     "learnMore":"Learn More",
     "Shop Our Top Categories":"Shop Our Top Categories",
     "Today best Deals For You!":"Today best Deals For You!",
-    "Add to Cart":"Add to Cart"
+    "Add to Cart":"Add to Cart",
+    "Choose By Brand":"Choose By Brand"
 
 }
