Refactor Brands component styles and update i18n translations

--- a/ecommerce-website/src/locales/en.json
+++ b/ecommerce-website/src/locales/en.json
@@ -23,6 +23,8 @@
     "Shop Our Top Categories":"Shop Our Top Categories",
     "Today best Deals For You!":"Today best Deals For You!",
     "Add to Cart":"Add to Cart",
-    "Choose By Brand":"Choose By Brand"
+    "Choose By Brand":"Choose By Brand",
+    "Get 5% Cash Back":"Get 5% Cash Back",
+    "on ShopCart.com":"on ShopCart.com"
 
 }
