--- a/ecommerce-website/src/locales/ar.json
+++ b/ecommerce-website/src/locales/ar.json
@@ -23,5 +23,8 @@
   "Shop Our Top Categories": "التسوق من افضل الفئات ",
   "Today best Deals For You!": "أفضل العروض اليوم لك!",
   "Add to Cart": "أضف إلى السلة",
-  "Choose By Brand": "اختر حسب العلامة التجارية"
+  "Choose By Brand": "اختر حسب العلامة التجارية",
+  "Get 5% Cash Back": "احصل على 5٪ نقدًا",
+  "on ShopCart.com": "على ShopCart.com"
+
 }
