Refactor BestDeals component and add Discounts component

--- a/ecommerce-website/src/locales/ar.json
+++ b/ecommerce-website/src/locales/ar.json
@@ -25,6 +25,8 @@
   "Add to Cart": "أضف إلى السلة",
   "Choose By Brand": "اختر حسب العلامة التجارية",
   "Get 5% Cash Back": "احصل على 5٪ نقدًا",
-  "on ShopCart.com": "على ShopCart.com"
+  "on ShopCart.com": "على ShopCart.com",
+  "Get Up 70% Off": "احصل على خصم يصل إلى 70٪",
+  "save":"وفر"
 
 }
