--- a/ecommerce-website/src/locales/en.json
+++ b/ecommerce-website/src/locales/en.json
@@ -25,6 +25,8 @@
     "Add to Cart":"Add to Cart",
     "Choose By Brand":"Choose By Brand",
     "Get 5% Cash Back":"Get 5% Cash Back",
-    "on ShopCart.com":"on ShopCart.com"
+    "on ShopCart.com":"on ShopCart.com",
+    "Get Up 70% Off":"Get Up 70% Off",  
+    "save":"Save"
 
 }
