Refactor Discounts component styles and translations

--- a/ecommerce-website/src/locales/en.json
+++ b/ecommerce-website/src/locales/en.json
@@ -27,6 +27,7 @@
     "Get 5% Cash Back":"Get 5% Cash Back",
     "on ShopCart.com":"on ShopCart.com",
     "Get Up 70% Off":"Get Up 70% Off",  
-    "save":"Save"
+    "save":"Save",
+    "Services To Help You Shop":"Services To Help You Shop"
 
 }
