--- a/ecommerce-website/src/locales/ar.json
+++ b/ecommerce-website/src/locales/ar.json
@@ -27,6 +27,7 @@
   "Get 5% Cash Back": "احصل على 5٪ نقدًا",
   "on ShopCart.com": "على ShopCart.com",
   "Get Up 70% Off": "احصل على خصم يصل إلى 70٪",
-  "save":"وفر"
+  "save":"وفر",
+  "Services To Help You Shop":"خدمات لمساعدتك في التسوق"
 
 }
