Refactor App.vue to add Footer component

--- a/ecommerce-website/src/locales/ar.json
+++ b/ecommerce-website/src/locales/ar.json
@@ -27,7 +27,24 @@
   "Get 5% Cash Back": "احصل على 5٪ نقدًا",
   "on ShopCart.com": "على ShopCart.com",
   "Get Up 70% Off": "احصل على خصم يصل إلى 70٪",
-  "save":"وفر",
-  "Services To Help You Shop":"خدمات لمساعدتك في التسوق"
-
+  "save": "وفر",
+  "Services To Help You Shop": "خدمات لمساعدتك في التسوق",
+  "Accepted Payment Methods": "طرق الدفع المقبولة",
+  "Departments": "الأقسام",
+  "About Us": "معلومات عنا",
+  "About ShopCart": "حول ShopCart",
+  "News": "الأخبار",
+  "Help": "المساعدة",
+  "ShopCart brands": "علامات تجارية ShopCart",
+  "Services": "الخدمات",
+  "Gift Cards": "بطاقات الهدايا",
+  "Mobile App": "تطبيق الجوال",
+  "Order Pickup": "استلام الطلب",
+  "Account SignUp": "تسجيل الحساب",
+  "ShopCart Help": "مساعدة ShopCart",
+  "Returns": "الإرجاع",
+  "Track Orders": "تتبع الطلبات",
+  "Contact Us": "اتصل بنا",
+  "Feedback": "ردود الفعل",
+  "Security": "الأمان"
 }
