--- a/ecommerce-website/src/locales/en.json
+++ b/ecommerce-website/src/locales/en.json
@@ -1,33 +1,50 @@
 {
-    "hello": "Hello",
-    "Get 50% off on selected items": "Get 50% off on selected items",
-    "shopNow": "Shop Now",
-    "Categories": "Categories",
-    "Deals": "Deals",
-    "Products": "Products",
-    "Cart": "Cart",
-    "Checkout": "Checkout",
-    "Home": "Home",
-    "About": "About",
-    "Contact": "Contact",
-    "Search": "Search",
-    "Account": "Account",
-    "ShopCart": "Cart",
-    "What's New": "What's New",
-    "Delivery": "Delivery",
-    "light": "Light",
-    "dark": "Dark",
-    "Shopping And Department Store": "Shopping And Department Store",
-    "bannerDescription":"Shop Cart is an e-commerce website offering a wide range of products across various categories. Enjoy seamless shopping with secure payments and fast delivery options",
-    "learnMore":"Learn More",
-    "Shop Our Top Categories":"Shop Our Top Categories",
-    "Today best Deals For You!":"Today best Deals For You!",
-    "Add to Cart":"Add to Cart",
-    "Choose By Brand":"Choose By Brand",
-    "Get 5% Cash Back":"Get 5% Cash Back",
-    "on ShopCart.com":"on ShopCart.com",
-    "Get Up 70% Off":"Get Up 70% Off",  
-    "save":"Save",
-    "Services To Help You Shop":"Services To Help You Shop"
-
+  "hello": "Hello",
+  "Get 50% off on selected items": "Get 50% off on selected items",
+  "shopNow": "Shop Now",
+  "Categories": "Categories",
+  "Deals": "Deals",
+  "Products": "Products",
+  "Cart": "Cart",
+  "Checkout": "Checkout",
+  "Home": "Home",
+  "About": "About",
+  "Contact": "Contact",
+  "Search": "Search",
+  "Account": "Account",
+  "ShopCart": "Cart",
+  "What's New": "What's New",
+  "Delivery": "Delivery",
+  "light": "Light",
+  "dark": "Dark",
+  "Shopping And Department Store": "Shopping And Department Store",
+  "bannerDescription": "Shop Cart is an e-commerce website offering a wide range of products across various categories. Enjoy seamless shopping with secure payments and fast delivery options",
+  "learnMore": "Learn More",
+  "Shop Our Top Categories": "Shop Our Top Categories",
+  "Today best Deals For You!": "Today best Deals For You!",
+  "Add to Cart": "Add to Cart",
+  "Choose By Brand": "Choose By Brand",
+  "Get 5% Cash Back": "Get 5% Cash Back",
+  "on ShopCart.com": "on ShopCart.com",
+  "Get Up 70% Off": "Get Up 70% Off",
+  "save": "Save",
+  "Services To Help You Shop": "Services To Help You Shop",
+  "Accepted Payment Methods": "Accepted Payment Methods",
+  "Departments": "Departments",
+  "About Us": "About Us",
+  "About ShopCart": "About ShopCart",
+  "News": "News",
+  "Help": "Help",
+  "ShopCart brands": "ShopCart brands",
+  "Services": "Services",
+  "Gift Cards": "Gift Cards",
+  "Mobile App": "Mobile App",
+  "Order Pickup": "Order Pickup",
+  "Account SignUp": "Account SignUp",
+  "ShopCart Help": "ShopCart Help",
+  "Returns": "Returns",
+  "Track Orders": "Track Orders",
+  "Contact Us": "Contact Us",
+  "Feedback": "Feedback",
+  "Security": "Security"
 }
