Refactor localization files and add headphone filters to CategoryView

--- a/ecommerce-website/src/locales/ar.json
+++ b/ecommerce-website/src/locales/ar.json
@@ -46,5 +46,13 @@
   "Track Orders": "تتبع الطلبات",
   "Contact Us": "اتصل بنا",
   "Feedback": "ردود الفعل",
-  "Security": "الأمان"
+  "Security": "الأمان",
+  "Grab Up to 50% Off On Selected HeadPhone":"احصل على خصم يصل إلى 50٪ على سماعات الرأس المحددة",
+  "Headphone Type":"نوع السماعة",
+  "Price":"السعر",
+  "Color":"اللون",
+  "Reviews":"التقييمات",
+  "Material":"مادة المنتج",
+  "Offers":"العروض",
+  "Brand":"العلامة التجارية"
 }
