--- a/ecommerce-website/src/locales/en.json
+++ b/ecommerce-website/src/locales/en.json
@@ -46,5 +46,13 @@
   "Track Orders": "Track Orders",
   "Contact Us": "Contact Us",
   "Feedback": "Feedback",
-  "Security": "Security"
+  "Security": "Security",
+  "Grab Up to 50% Off On Selected HeadPhone": "Grab Up to 50% Off On Selected HeadPhone",
+  "Headphone Type": "Headphone Type",
+  "Price": "Price",
+  "Color": "Color",
+  "Reviews": "Reviews",
+  "Material": "Material",
+  "Offers": "Offers",
+  "Brand": "Brand"
 }
