Refactor localization files and add headphone filters to CategoryView

--- a/ecommerce-website/src/locales/ar.json
+++ b/ecommerce-website/src/locales/ar.json
@@ -54,5 +54,6 @@
   "Reviews":"التقييمات",
   "Material":"مادة المنتج",
   "Offers":"العروض",
-  "Brand":"العلامة التجارية"
+  "Brand":"العلامة التجارية",
+  "HeadPhons For You":"سماعات الرأس لك"
 }
