--- a/ecommerce-website/src/locales/en.json
+++ b/ecommerce-website/src/locales/en.json
@@ -54,5 +54,6 @@
   "Reviews": "Reviews",
   "Material": "Material",
   "Offers": "Offers",
-  "Brand": "Brand"
+  "Brand": "Brand",
+  "HeadPhons For You": "HeadPhons For You"
 }
