Refactor firebase.ts and CategoryView.vue

--- a/ecommerce-website/src/locales/ar.json
+++ b/ecommerce-website/src/locales/ar.json
@@ -55,5 +55,6 @@
   "Material":"مادة المنتج",
   "Offers":"العروض",
   "Brand":"العلامة التجارية",
-  "HeadPhons For You":"سماعات الرأس لك"
+  "HeadPhons For You":"سماعات الرأس لك",
+  "Weekly Popular Products":"المنتجات الأكثر شهرة هذا الأسبوع"
 }
