--- a/ecommerce-website/src/locales/en.json
+++ b/ecommerce-website/src/locales/en.json
@@ -55,5 +55,6 @@
   "Material": "Material",
   "Offers": "Offers",
   "Brand": "Brand",
-  "HeadPhons For You": "HeadPhons For You"
+  "HeadPhons For You": "HeadPhons For You",
+  "Weekly Popular Products": "Weekly Popular Products"
 }
