Refactor text color and background color in components

--- a/ecommerce-website/src/locales/ar.json
+++ b/ecommerce-website/src/locales/ar.json
@@ -56,5 +56,6 @@
   "Offers":"العروض",
   "Brand":"العلامة التجارية",
   "HeadPhons For You":"سماعات الرأس لك",
-  "Weekly Popular Products":"المنتجات الأكثر شهرة هذا الأسبوع"
+  "Weekly Popular Products":"المنتجات الأكثر شهرة هذا الأسبوع",
+  "search":"ابحث"
 }
