--- a/ecommerce-website/src/locales/en.json
+++ b/ecommerce-website/src/locales/en.json
@@ -56,5 +56,6 @@
   "Offers": "Offers",
   "Brand": "Brand",
   "HeadPhons For You": "HeadPhons For You",
-  "Weekly Popular Products": "Weekly Popular Products"
+  "Weekly Popular Products": "Weekly Popular Products",
+  "search": "Search"
 }
