Refactor component styles and localization files

--- a/ecommerce-website/src/locales/ar.json
+++ b/ecommerce-website/src/locales/ar.json
@@ -57,5 +57,6 @@
   "Brand":"العلامة التجارية",
   "HeadPhons For You":"سماعات الرأس لك",
   "Weekly Popular Products":"المنتجات الأكثر شهرة هذا الأسبوع",
-  "search":"ابحث"
+  "search":"ابحث",
+  "Buy Now":"اشتري الآن"
 }
