--- a/ecommerce-website/src/locales/en.json
+++ b/ecommerce-website/src/locales/en.json
@@ -57,5 +57,6 @@
   "Brand": "Brand",
   "HeadPhons For You": "HeadPhons For You",
   "Weekly Popular Products": "Weekly Popular Products",
-  "search": "Search"
+  "search": "Search",
+  "Buy Now": "Buy Now"
 }
