Refactor Products.vue to fetch and display products from Firebase

--- a/ecommerce-website/src/locales/ar.json
+++ b/ecommerce-website/src/locales/ar.json
@@ -47,16 +47,34 @@
   "Contact Us": "اتصل بنا",
   "Feedback": "ردود الفعل",
   "Security": "الأمان",
-  "Grab Up to 50% Off On Selected HeadPhone":"احصل على خصم يصل إلى 50٪ على سماعات الرأس المحددة",
-  "Headphone Type":"نوع السماعة",
-  "Price":"السعر",
-  "Color":"اللون",
-  "Reviews":"التقييمات",
-  "Material":"مادة المنتج",
-  "Offers":"العروض",
-  "Brand":"العلامة التجارية",
-  "HeadPhons For You":"سماعات الرأس لك",
-  "Weekly Popular Products":"المنتجات الأكثر شهرة هذا الأسبوع",
-  "search":"ابحث",
-  "Buy Now":"اشتري الآن"
+  "Grab Up to 50% Off On Selected HeadPhone": "احصل على خصم يصل إلى 50٪ على سماعات الرأس المحددة",
+  "Headphone Type": "نوع السماعة",
+  "Price": "السعر",
+  "Color": "اللون",
+  "Reviews": "التقييمات",
+  "Material": "مادة المنتج",
+  "Offers": "العروض",
+  "Brand": "العلامة التجارية",
+  "HeadPhons For You": "سماعات الرأس لك",
+  "Weekly Popular Products": "المنتجات الأكثر شهرة هذا الأسبوع",
+  "search": "ابحث",
+  "Buy Now": "اشتري الآن",
+  "Free Delivery": "توصيل مجاني",
+  "Enter your postal code for delivery availability": "أدخل الرمز البريدي للتحقق من توفر التوصيل",
+  "Apple AirPods Max Wireless Headphones Full Specification": "مواصفات سماعات الرأس اللاسلكية Apple AirPods Max",
+  "General": "عام",
+  "Model": "الموديل",
+  "Release Date": "تاريخ الإصدار",
+  "Model number": "رقم الموديل",
+  "Headphone":"سماعة الرأس",
+  "Connectivity": "الاتصال",
+  "Product details": "تفاصيل المنتج",
+  "Microphone": "ميكروفون",
+  "Driver Type": "نوع المنفذ",
+  "Number of drivers": "عدد المنافذ",
+  "Water Resistant": "مقاوم للماء",
+  "Weight (g)": "الوزن (جرام)",
+  "Driver size": "حجم المنفذ",
+  "Battery Life (Hrs)":"عمر البطارية (ساعات)",
+  "Smiler Items Might Like": "قد تعجبك العناصر المماثلة"
 }
