--- a/ecommerce-website/src/locales/en.json
+++ b/ecommerce-website/src/locales/en.json
@@ -58,5 +58,23 @@
   "HeadPhons For You": "HeadPhons For You",
   "Weekly Popular Products": "Weekly Popular Products",
   "search": "Search",
-  "Buy Now": "Buy Now"
+  "Buy Now": "Buy Now",
+  "Free Delivery": "Free Delivery",
+  "Enter your postal code for delivery availability": "Enter your postal code for delivery availability",
+  "Apple AirPods Max Wireless Headphones Full Specification": "Apple AirPods Max Wireless Headphones Full Specification",
+  "General": "General",
+  "Model": "Model",
+  "Release Date": "Release Date",
+  "Model number": "Model number",
+  "Headphone": "Headphone",
+  "Connectivity": "Connectivity",
+  "Product details": "Product details",
+  "Microphone": "Microphone",
+  "Driver Type": "Driver Type",
+  "Number of drivers": "Number of drivers",
+  "Water Resistant": "Water Resistant",
+  "Weight (g)": "Weight (g)",
+  "Driver size": "Driver size",
+  "Battery Life (Hrs)": "Battery Life (Hrs)",
+  "Smiler Items Might Like": "Smiler Items Might Like"
 }
