Refactor CartView.vue, router/index.ts, locales/en.json, locales/ar.json, components/HomeBanner.vue, components/ProductCard.vue, stores/cart.ts, components/AddToCart.vue, and views/CategoryView.vue

--- a/ecommerce-website/src/locales/ar.json
+++ b/ecommerce-website/src/locales/ar.json
@@ -76,5 +76,6 @@
   "Weight (g)": "الوزن (جرام)",
   "Driver size": "حجم المنفذ",
   "Battery Life (Hrs)":"عمر البطارية (ساعات)",
-  "Smiler Items Might Like": "قد تعجبك العناصر المماثلة"
+  "Smiler Items Might Like": "قد تعجبك العناصر المماثلة",
+  "in the cart": "في السلة"
 }
