--- a/ecommerce-website/src/locales/en.json
+++ b/ecommerce-website/src/locales/en.json
@@ -76,5 +76,6 @@
   "Weight (g)": "Weight (g)",
   "Driver size": "Driver size",
   "Battery Life (Hrs)": "Battery Life (Hrs)",
-  "Smiler Items Might Like": "Smiler Items Might Like"
+  "Smiler Items Might Like": "Smiler Items Might Like",
+  "in the cart": "In the cart"
 }
