--- a/ecommerce-website/src/locales/en.json
+++ b/ecommerce-website/src/locales/en.json
@@ -12,7 +12,7 @@
   "Contact": "Contact",
   "Search": "Search",
   "Account": "Account",
-  "ShopCart": "Cart",
+  "ShopCart": "Shop Cart",
   "What's New": "What's New",
   "Delivery": "Delivery",
   "light": "Light",
