Refactor AddToCart component to remove unnecessary quantity increment

--- a/ecommerce-website/src/locales/ar.json
+++ b/ecommerce-website/src/locales/ar.json
@@ -77,5 +77,6 @@
   "Driver size": "حجم المنفذ",
   "Battery Life (Hrs)":"عمر البطارية (ساعات)",
   "Smiler Items Might Like": "قد تعجبك العناصر المماثلة",
-  "in the cart": "في السلة"
+  "in the cart": "في السلة",
+  "Review Items And Shipping":"مراجعة العناصر والشحن"
 }
