--- a/ecommerce-website/src/locales/en.json
+++ b/ecommerce-website/src/locales/en.json
@@ -77,5 +77,6 @@
   "Driver size": "Driver size",
   "Battery Life (Hrs)": "Battery Life (Hrs)",
   "Smiler Items Might Like": "Smiler Items Might Like",
-  "in the cart": "In the cart"
+  "in the cart": "In the cart",
+  "Review Items And Shipping": "Review Items And Shipping"
 }
