Refactor localization files to add delivery information

--- a/ecommerce-website/src/locales/ar.json
+++ b/ecommerce-website/src/locales/ar.json
@@ -78,5 +78,6 @@
   "Battery Life (Hrs)":"عمر البطارية (ساعات)",
   "Smiler Items Might Like": "قد تعجبك العناصر المماثلة",
   "in the cart": "في السلة",
-  "Review Items And Shipping":"مراجعة العناصر والشحن"
+  "Review Items And Shipping":"مراجعة العناصر والشحن",
+  "Delivery Information":"معلومات التوصيل"
 }
