--- a/ecommerce-website/src/locales/en.json
+++ b/ecommerce-website/src/locales/en.json
@@ -78,5 +78,6 @@
   "Battery Life (Hrs)": "Battery Life (Hrs)",
   "Smiler Items Might Like": "Smiler Items Might Like",
   "in the cart": "In the cart",
-  "Review Items And Shipping": "Review Items And Shipping"
+  "Review Items And Shipping": "Review Items And Shipping",
+  "Delivery Information": "Delivery Information"
 }
