Refactor file paths for AddToCart component

--- a/ecommerce-website/src/locales/ar.json
+++ b/ecommerce-website/src/locales/ar.json
@@ -66,7 +66,7 @@
   "Model": "الموديل",
   "Release Date": "تاريخ الإصدار",
   "Model number": "رقم الموديل",
-  "Headphone":"سماعة الرأس",
+  "Headphone": "سماعة الرأس",
   "Connectivity": "الاتصال",
   "Product details": "تفاصيل المنتج",
   "Microphone": "ميكروفون",
@@ -75,9 +75,34 @@
   "Water Resistant": "مقاوم للماء",
   "Weight (g)": "الوزن (جرام)",
   "Driver size": "حجم المنفذ",
-  "Battery Life (Hrs)":"عمر البطارية (ساعات)",
+  "Battery Life (Hrs)": "عمر البطارية (ساعات)",
   "Smiler Items Might Like": "قد تعجبك العناصر المماثلة",
   "in the cart": "في السلة",
-  "Review Items And Shipping":"مراجعة العناصر والشحن",
-  "Delivery Information":"معلومات التوصيل"
+  "Review Items And Shipping": "مراجعة العناصر والشحن",
+  "Delivery Information": "معلومات التوصيل",
+  "First Name": "الاسم الأول",
+  "Last Name": "الاسم الأخير",
+  "Email": "البريد الإلكتروني",
+  "Phone": "الهاتف",
+  "Address": "العنوان",
+  "I agree with the": "أوافق على",
+  "terms and conditions": "الشروط والأحكام",
+  "Order Summary": "ملخص الطلب",
+  "Enter Coupon Code": "أدخل رمز التخفيض",
+  "Apply Coupon": "تطبيق التخفيض",
+  "Payment Details": "تفاصيل الدفع",
+  "Cash on Delivery": "الدفع عند الاستلام",
+  "ZainCash": "زين كاش",
+  "Credit or Debit card": "بطاقة الائتمان أو الخصم",
+  "Card Holder Number": "رقم حامل البطاقة",
+  "Card Number": "رقم البطاقة",
+  "Expiry Date": "تاريخ الانتهاء",
+  "CVV": "CVV",
+  "Sub Total": "المجموع الفرعي",
+  "Tax(10%)": "الضريبة (10٪)",
+  "Coupon Discount": "خصم الكوبون",
+  "Shipping Cost": "تكلفة الشحن",
+  "Total": "المجموع",
+  "Pay": "ادفع",
+  "Next":"التالي"
 }
