--- a/ecommerce-website/src/locales/en.json
+++ b/ecommerce-website/src/locales/en.json
@@ -79,5 +79,30 @@
   "Smiler Items Might Like": "Smiler Items Might Like",
   "in the cart": "In the cart",
   "Review Items And Shipping": "Review Items And Shipping",
-  "Delivery Information": "Delivery Information"
+  "Delivery Information": "Delivery Information",
+  "First Name": "First Name",
+  "Last Name": "Last Name",
+  "Email": "Email",
+  "Phone": "Phone",
+  "Address": "Address",
+  "I agree with the": "I agree with the",
+  "terms and conditions": "terms and conditions",
+  "Order Summary": "Order Summary",
+  "Enter Coupon Code": "Enter Coupon Code",
+  "Apply Coupon": "Apply Coupon",
+  "Payment Details": "Payment Details",
+  "Cash on Delivery": "Cash on Delivery",
+  "ZainCash": "ZainCash",
+  "Credit or Debit card": "Credit or Debit card",
+  "Card Holder Number": "Card Holder Number",
+  "Card Number": "Card Number",
+  "Expiry Date": "Expiry Date",
+  "CVV": "CVV",
+  "Sub Total": "Sub Total",
+  "Tax(10%)": "Tax (10%)",
+  "Coupon Discount": "Coupon Discount",
+  "Shipping Cost": "Shipping Cost",
+  "Total": "Total",
+  "Pay": "Pay",
+  "Next": "Next"
 }
